feat(01): header/slider/Map
- Configuration du scroll pour le header
- Configuration de la sélection du menu pour le header
- Ajout d'un scroll into view

- Création d'un sliderService
- Création d'un menuService
- Création d'un model pour le caroussel
- Gestion des evenements au clic
- Gestion des evenements au keydown
- Gestion du caroussel auto
- Intégration de la map de mapBox
- Modification de mapService pour l'intégration de mapbox-gl
- Ajout du link css dans angular.json pour mapbox-gl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,24 @@
-<app-header></app-header>
+<app-header
+  [title]="title"
+  [adressMalt]="adressMalt"
+  [adressWebsite]="adressWebsite"
+  [github]="github"
+></app-header>
 <app-slider></app-slider>
 
 <!--Main layout-->
 <main>
+  <div class="position-relative">
+    <div id="toContainer" class="position-absolute" [ngStyle]="{ top: '-70px' }"></div>
+  </div>
   <div class="container">
     <!--Section: Main info-->
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
-        <app-map></app-map>
+        <app-map class="col-md-12"></app-map>
 
-        <app-reservation></app-reservation>
+        <app-reservation class="col-md-12 mt-4"></app-reservation>
       </div>
       <!--Grid row-->
     </section>
