--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -1,5 +1,5 @@
 <!--Grid column-->
-<div class="col-md-12 mb-4">
-  <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="" />
+<div [ngStyle]="{'height': '600px'}">
+  <div id="map" class=" w-100 col-md-12" ></div>
 </div>
 <!--Grid column-->
