feat(02): mapbox/marker/formulaire
- Configuration de map pour intégrer les marqueurs
- Instanciation des marqueurs dans le component
- Build d'un popup pour chaque marqueur
- Ajout des images pour les marqueurs
- Ajout de la dépendance angular-animation
- Ajout du component formulaire
- Ajout du component stepper
- Ajout d'une sidebar pour recevoir la réservation

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -41,9 +41,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a href="{{ github }}" class="nav-link border border-light rounded" target="_blank">
-            <i class="fab fa-github mr-2"></i>Velooc GitHub
-          </a>
+          <a href="{{ github }}" class="nav-link border border-light rounded" target="_blank"> <i class="fab fa-github mr-2"></i>Velooc GitHub </a>
         </li>
       </ul>
     </div>
