--- a/src/app/pages/reservation/reservation.component.html
+++ b/src/app/pages/reservation/reservation.component.html
@@ -1,27 +1,18 @@
 <!--Grid column-->
-<div class="col-md-6 mb-4">
+<div class="col-md-12 mb-4">
   <!-- Main heading -->
-  <h3 class="h3 mb-3">Material Design for Bootstrap</h3>
-  <p>This template is created with Material Design for Bootstrap ( <strong>MDB</strong> ) framework.</p>
-  <p>Read details below to learn more about MDB.</p>
-  <!-- Main heading -->
-
-  <hr />
-
-  <p>
-    <strong>400+</strong> material UI elements, <strong>600+</strong> material icons, <strong>74</strong> CSS animations, SASS files, templates,
-    tutorials and many more.
-    <strong>Free for personal and commercial use.</strong>
-  </p>
-
-  <!-- CTA -->
-  <a target="_blank" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" class="btn btn-indigo btn-md"
-    >Download
-    <i class="fas fa-download ml-1"></i>
-  </a>
-  <a target="_blank" href="https://mdbootstrap.com/docs/jquery/components/" class="btn btn-indigo btn-md"
-    >Live demo
-    <i class="far fa-image ml-1"></i>
-  </a>
+  <h3 class="h3 mb-3"></h3>
+  <button class="btn btn-indigo btn-md" (click)="onCloseSidebar()">Réduire</button>
+  <app-formulaire></app-formulaire>
+</div>
+<div class="votre-selection">
+  <h3 class="text-primary">Votre sélection</h3>
+  <h4>{{ station }}</h4>
+  <p>Vélo disponible: {{ availableBikes }}</p>
+  <h4 class="text-success" *ngIf="availability === 'Bleu' || availability === 'Vert'">{{ status }}</h4>
+  <h4 class="text-warning" *ngIf="availability === 'Orange'">{{ status }}</h4>
+  <p>{{ address }}</p>
+  <p *ngIf="address2 !== 'None'">{{ address2 }}</p>
+  <p>{{ commune }}</p>
 </div>
 <!--Grid column-->
