--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
-<app-header
-  [title]="title"
-  [adressMalt]="adressMalt"
-  [adressWebsite]="adressWebsite"
-  [github]="github"
-></app-header>
+<div class="background-overlay" *ngIf="menuState === 'in'"></div>
+<app-header [title]="title" [adressMalt]="adressMalt" [adressWebsite]="adressWebsite" [github]="github"></app-header>
 <app-slider></app-slider>
 
 <!--Main layout-->
@@ -16,9 +12,8 @@
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
-        <app-map class="col-md-12"></app-map>
-
-        <app-reservation class="col-md-12 mt-4"></app-reservation>
+        <app-map (menuState)="onGetMenuState($event)" class="col-md-12"></app-map>
+        <app-reservation [@slideInOut]="menuState" (menuState)="onGetMenuState($event)"></app-reservation>
       </div>
       <!--Grid row-->
     </section>
