--- a/src/app/pages/slider/caroussel/caroussel.component.html
+++ b/src/app/pages/slider/caroussel/caroussel.component.html
@@ -3,12 +3,12 @@
     <!-- Mask & flexbox options-->
     <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
       <!-- Content -->
-      <div class="text-center white-text mx-5 wow fadeIn">
+      <div class="text-center white-text mx-5 wow fadeIn" [@thumbState]="id === caroussel ? 'active' : 'inactive'">
         <h1 class="mb-4">
           <strong>{{ header }}</strong>
         </h1>
 
-        <p>
+        <p [@zoomInOnEnter]>
           <strong>{{ subheader }}</strong>
         </p>
 
@@ -16,10 +16,7 @@
           <strong>{{ paragraph }}</strong>
         </h2>
 
-        <a
-          *ngIf="link != ''"
-          href="#"
-          class="btn btn-outline-white btn-lg"
+        <a *ngIf="link != ''" href="#" class="btn btn-outline-white btn-lg"
           >{{ link }}
           <i class="fas fa-graduation-cap ml-2"></i>
         </a>
