--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" [ngClass]="{ 'top-nav-collapse': scrolling }">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar for-all-screen" [ngClass]="{ 'top-nav-collapse': scrolling }">
   <div class="container">
     <!-- Brand -->
     <a class="navbar-brand" href="/">
