--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -1,5 +1,5 @@
 <!--Grid column-->
 <div [ngStyle]="{ height: '600px' }">
-  <div id="map" class=" w-100 col-md-12"></div>
+  <div id="map" class="w-100 col-md-12 z-depth-1-half"></div>
 </div>
 <!--Grid column-->
