--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,14 +12,21 @@
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
-        <app-map (menuState)="onGetMenuState($event)" class="col-md-12"></app-map>
-        <app-reservation [@slideInOut]="menuState" (menuState)="onGetMenuState($event)"></app-reservation>
+        <app-map (menuState)="onGetMenuState($event)" (sessionStorage$)="onGetSessionStorage($event)" class="col-md-12"></app-map>
+        <app-reservation
+          [@slideInOut]="menuState"
+          (menuState)="onGetMenuState($event)"
+          [sessionStorage$]="sessionStorage$"
+        ></app-reservation>
       </div>
       <!--Grid row-->
     </section>
     <!--Section: Main info-->
-
     <hr class="my-5" />
+    <div class="position-relative">
+      <div id="toAbout" class="position-absolute" [ngStyle]="{ top: '-70px' }"></div>
+    </div>
+    <app-about></app-about>
   </div>
 </main>
 <!--Main layout-->
