--- a/src/app/pages/reservation/reservation.component.html
+++ b/src/app/pages/reservation/reservation.component.html
@@ -5,14 +5,14 @@
   <button class="btn btn-indigo btn-md" (click)="onCloseSidebar()">Réduire</button>
   <app-formulaire></app-formulaire>
 </div>
-<div class="votre-selection">
+<div class="votre-selection" *ngIf="sessionStorage$ | async as info">
   <h3 class="text-primary">Votre sélection</h3>
-  <h4>{{ station }}</h4>
-  <p>Vélo disponible: {{ availableBikes }}</p>
-  <h4 class="text-success" *ngIf="availability === 'Bleu' || availability === 'Vert'">{{ status }}</h4>
-  <h4 class="text-warning" *ngIf="availability === 'Orange'">{{ status }}</h4>
-  <p>{{ address }}</p>
-  <p *ngIf="address2 !== 'None'">{{ address2 }}</p>
-  <p>{{ commune }}</p>
+  <h4>{{ info.station }}</h4>
+  <p>Vélo disponible: {{ info.availableBikes }}</p>
+  <h4 class="text-success" *ngIf="info.availability === 'Bleu' || info.availability === 'Vert'">{{ info.status }}</h4>
+  <h4 class="text-warning" *ngIf="info.availability === 'Orange'">{{ info.status }}</h4>
+  <p>{{ info.address }}</p>
+  <p *ngIf="info.address2 !== 'None'">{{ info.address2 }}</p>
+  <p>{{ info.commune }}</p>
 </div>
 <!--Grid column-->
