--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="background-overlay" *ngIf="menuState === 'in'"></div>
 <app-header [title]="title" [adressMalt]="adressMalt" [adressWebsite]="adressWebsite" [github]="github"></app-header>
 <app-slider></app-slider>
-
+<div #test></div>
 <!--Main layout-->
 <main>
   <div class="position-relative">
@@ -12,13 +12,11 @@
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
-        <app-map (menuState)="onGetMenuState($event)" (sessionStorage$)="onGetSessionStorage($event)" class="col-md-12"></app-map>
-        <app-reservation
-          [@slideInOut]="menuState"
-          (menuState)="onGetMenuState($event)"
-          [sessionStorage$]="sessionStorage$"
-        ></app-reservation>
+        <app-map (menuState)="onGetMenuState($event)" (sessionStorageMap$)="onGetSessionStorage($event)" class="col-md-12"></app-map>
       </div>
+      <aside class="sidebar-reservation">
+        <app-reservation [@slideInOut]="menuState" (menuState)="onGetMenuState($event)" [sessionStorageMap$]="sessionStorageMap$"></app-reservation>
+      </aside>
       <!--Grid row-->
     </section>
     <!--Section: Main info-->
