--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,15 +1,11 @@
 <!--Section: More-->
 <section>
-
   <h2 class="my-5 h3 text-center">A propos de l'application</h2>
   <!--Grid row-->
   <div class="row">
-
     <!--Grid column-->
     <div class="col-md-6 mb-4">
-
-      <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="">
-
+      <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="" />
     </div>
     <!--Grid column-->
 
@@ -17,21 +13,24 @@
     <div class="col-md-6 mb-4">
       <!-- Main heading -->
       <h3 class="h3 mb-3">Refonte d'un projet étudiant</h3>
-      <p>Ce projet est l'un des projets étudiant qu'il faut valider pour l'obtention du diplôme de Développeur Web Junior chez <strong>OpenClassroom</strong>. Cette application a pour seul but la mise à jour des compétences technologique. Toute la partie réservation est
-        <strong>simulé</strong>.</p>
+      <p>
+        Ce projet est l'un des projets étudiant qu'il faut valider pour l'obtention du diplôme de Développeur Web Junior chez
+        <strong>OpenClassroom</strong>. Cette application a pour seul but la mise à jour des compétences technologique. Toute la partie réservation
+        est <strong>simulé</strong>.
+      </p>
       <p><a href="https://openclassrooms.com/fr/paths/185-developpeur-web" target="_blank">Pour plus d'information, cliquer sur le lien.</a></p>
       <!-- Main heading -->
-      <hr>
-      <p>Ce projet a été refait afin de <strong>mettre à jour les compétences</strong>, se former <strong>aux nouvelles technologies</strong> et de maintenie la <strong>veille technologique</strong>.</p>
-
+      <hr />
+      <p>
+        Ce projet a été refait afin de <strong>mettre à jour les compétences</strong>, se former <strong>aux nouvelles technologies</strong> et de
+        maintenie la <strong>veille technologique</strong>.
+      </p>
     </div>
     <!--Grid column-->
-
   </div>
   <!--Grid row-->
   <!--First row-->
   <div class="row features-small mt-5 wow fadeIn">
-
     <!--Grid column-->
     <div class="col-xl-3 col-lg-6">
       <!--Grid row-->
@@ -41,8 +40,7 @@
         </div>
         <div class="col-10 mb-2 pl-3">
           <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-          <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.
-          </p>
+          <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.</p>
         </div>
       </div>
       <!--/Grid row-->
@@ -58,20 +56,17 @@
         </div>
         <div class="col-10 mb-2">
           <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-          <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.
-          </p>
+          <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.</p>
         </div>
       </div>
       <!--/Grid row-->
     </div>
     <!--/Grid column-->
-
   </div>
   <!--/First row-->
 
   <!--Second row-->
   <div class="row features-small mt-4 wow fadeIn">
-
     <!--Grid column-->
     <div class="col-xl-3 col-lg-6">
       <!--Grid row-->
@@ -81,8 +76,10 @@
         </div>
         <div class="col-10 mb-2">
           <h5 class="feature-title font-bold mb-1">Modularity</h5>
-          <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as
-            well as modules for CSS (SASS files) and JS.</p>
+          <p class="grey-text mt-2">
+            Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as well as modules for CSS (SASS
+            files) and JS.
+          </p>
         </div>
       </div>
       <!--/Grid row-->
@@ -98,8 +95,7 @@
         </div>
         <div class="col-10 mb-2">
           <h5 class="feature-title font-bold mb-1">Technical support</h5>
-          <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.
-          </p>
+          <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.</p>
         </div>
       </div>
       <!--/Grid row-->
@@ -137,9 +133,7 @@
       <!--/Grid row-->
     </div>
     <!--/Grid column-->
-
   </div>
   <!--/Second row-->
-
 </section>
 <!--Section: More-->
