--- a/src/app/pages/reservation/formulaire/formulaire.component.html
+++ b/src/app/pages/reservation/formulaire/formulaire.component.html
@@ -3,15 +3,17 @@
   <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="lastname" class="bmd-label-floating">Nom</label>
-      <input type="text" class="form-control" id="lastname" formControlName="lastname" />
+      <input type="text" class="form-control" id="lastname" formControlName="lastname" ngModel="Badjah" />
     </div>
     <div class="form-group">
       <label for="firstname" class="bmd-label-floating">Prénom</label>
-      <input type="text" class="form-control" id="firstname" formControlName="firstname" />
+      <input type="text" class="form-control" id="firstname" formControlName="firstname" ngModel="Cédric" />
     </div>
     <button type="submit" class="btn btn-indigo btn-md" [disabled]="reservationForm.invalid">Continuer</button>
   </form>
 </ng-container>
 <ng-container *ngIf="stepper === 'step2'">
+  <h5>Signer dans le cadre</h5>
+  <app-canvas (sessionStorageSign$)="onGetSign($event)"></app-canvas>
   <div class="bg-white w-100 h-1OO"></div>
 </ng-container>
