--- a/src/styles.scss
+++ b/src/styles.scss
@@ -80,7 +80,7 @@ header,
   position: relative;
   background: #fff;
   border-radius: 3px;
-  box-shadow: 0 1px 2px rgba(0,0,0,.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   padding: 15px 10px 15px 10px;
   pointer-events: auto;
   min-width: 300px;
