--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,13 +12,35 @@
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
-        <app-map (menuState)="onGetMenuState($event)" (sessionStorageMap$)="onGetSessionStorage($event)" class="col-md-12"></app-map>
+        <app-map
+          (menuState)="onGetMenuState($event)"
+          (sessionStorageMap$)="onGetSessionStorage($event)"
+          (alert)="onAlert($event)"
+          class="col-md-12"
+        ></app-map>
       </div>
       <aside class="sidebar-reservation">
-        <app-reservation [@slideInOut]="menuState" (menuState)="onGetMenuState($event)" [sessionStorageMap$]="sessionStorageMap$"></app-reservation>
+        <app-reservation
+          [@slideInOut]="menuState"
+          (menuState)="onGetMenuState($event)"
+          [sessionStorageMap$]="sessionStorageMap$"
+          [remainReservation]="remainReservation"
+          [alert]="alert"
+        ></app-reservation>
       </aside>
       <!--Grid row-->
     </section>
+    <ng-container *ngIf="alert">
+      <div id="open-modal" class="modal-window" [ngClass]="{ 'modal-visible': alert }">
+        <div class="text-center">
+          <span title="Close" class="modal-close" (click)="onCloseAlert()">Close</span>
+          <h1>Information</h1>
+          <div>Vous avez déjà une réservation en cours.</div>
+          <div><small>Annuler la réservation en cliquant sur "Réservation" puis "Annuler" à votre droite</small></div>
+          <button (click)="onCloseAlert()" class="btn btn-primary mt-2">Compris</button>
+        </div>
+      </div>
+    </ng-container>
     <!--Section: Main info-->
     <hr class="my-5" />
     <div class="position-relative">
