feat: prepra prod
- preparation de la mise en prod
- suppression du fichier travis

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -5,7 +5,7 @@
   <div class="row">
     <!--Grid column-->
     <div class="col-md-6 mb-4">
-      <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="" />
+      <img src="https://mdbootstrap.com/img/Marketing/mdb-press-pack/mdb-main.jpg" class="img-fluid z-depth-1-half" alt="image mdb device" />
     </div>
     <!--Grid column-->
 
@@ -40,7 +40,7 @@
         </div>
         <div class="col-10 mb-2 pl-3">
           <h5 class="feature-title font-bold mb-1">Cross-browser compatibility</h5>
-          <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves all browsers; all browsers love MDB.</p>
+          <p class="grey-text mt-2">Les sites sont construits afin d'être supportés par les navigateurs les plus populaires: Chrome, Firefox, Safari, Opera, Microsoft Edge - MDB ect...</p>
         </div>
       </div>
       <!--/Grid row-->
@@ -55,18 +55,14 @@
           <i class="fas fa-level-up-alt fa-2x mb-1 indigo-text" aria-hidden="true"></i>
         </div>
         <div class="col-10 mb-2">
-          <h5 class="feature-title font-bold mb-1">Frequent updates</h5>
-          <p class="grey-text mt-2">MDB becomes better every month. We love the project and enhance as much as possible.</p>
+          <h5 class="feature-title font-bold mb-1">MDB</h5>
+          <p class="grey-text mt-2">Grâce au Material Design for Bootstrap, qui fournit des librairies compilés et prête à l'emploi, les sites sont construit plus rapidement. C'est un gain de temps pour la mise en service des sites web.</p>
         </div>
       </div>
       <!--/Grid row-->
     </div>
     <!--/Grid column-->
-  </div>
-  <!--/First row-->
 
-  <!--Second row-->
-  <div class="row features-small mt-4 wow fadeIn">
     <!--Grid column-->
     <div class="col-xl-3 col-lg-6">
       <!--Grid row-->
@@ -75,10 +71,9 @@
           <i class="fas fa-cubes fa-2x mb-1 indigo-text" aria-hidden="true"></i>
         </div>
         <div class="col-10 mb-2">
-          <h5 class="feature-title font-bold mb-1">Modularity</h5>
+          <h5 class="feature-title font-bold mb-1">SEO</h5>
           <p class="grey-text mt-2">
-            Material Design for Bootstrap comes with both, compiled, ready to use libraries including all features as well as modules for CSS (SASS
-            files) and JS.
+            La sémantique, l'architecture du site, les mots-clés ect..., sont soigneusement intégrer afin de permettre le référencement naturel (SEO)
           </p>
         </div>
       </div>
@@ -95,45 +90,16 @@
         </div>
         <div class="col-10 mb-2">
           <h5 class="feature-title font-bold mb-1">Technical support</h5>
-          <p class="grey-text mt-2">We care about reliability. If you have any questions - do not hesitate to contact us.</p>
-        </div>
-      </div>
-      <!--/Grid row-->
-    </div>
-    <!--/Grid column-->
-
-    <!--Grid column-->
-    <div class="col-xl-3 col-lg-6">
-      <!--Grid row-->
-      <div class="row">
-        <div class="col-2">
-          <i class="fas fa-th fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-        </div>
-        <div class="col-10 mb-2">
-          <h5 class="feature-title font-bold mb-1">Flexbox</h5>
-          <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment issues.</p>
-        </div>
-      </div>
-      <!--/Grid row-->
-    </div>
-    <!--/Grid column-->
-
-    <!--Grid column-->
-    <div class="col-xl-3 col-lg-6">
-      <!--Grid row-->
-      <div class="row">
-        <div class="col-2">
-          <i class="far fa-file-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
-        </div>
-        <div class="col-10 mb-2">
-          <h5 class="feature-title font-bold mb-1">SASS files</h5>
-          <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you compile them.</p>
+          <p class="grey-text mt-2">Suivre les projets même après la mise en ligne de vos projets est important. Si vous avez des questions, n'hésitez pas me contacter.</p>
         </div>
       </div>
       <!--/Grid row-->
     </div>
     <!--/Grid column-->
   </div>
-  <!--/Second row-->
+  <!--/First row-->
+
+
 </section>
 <!--Section: More-->
+
