--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,12 @@
   <div class="position-relative">
     <div id="toContainer" class="position-absolute" [ngStyle]="{ top: '-70px' }"></div>
   </div>
-  <div class="container">
+  <div class="container" [ngStyle]="{ maxWidth: '1440px' }">
     <!--Section: Main info-->
     <section class="mt-5 wow fadeIn">
       <!--Grid row-->
       <div class="row">
+        <h2 class="text-center w-100 m-5">Choisissez une station</h2>
         <app-map
           (menuState)="onGetMenuState($event)"
           (sessionStorageMap$)="onGetSessionStorage($event)"
