--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -2,12 +2,12 @@
 <footer class="page-footer text-center font-small mt-4 wow fadeIn">
   <!--Call to action-->
   <div class="pt-4">
-    <a class="btn btn-outline-white" href="https://mdbootstrap.com/docs/jquery/getting-started/download/" target="_blank" role="button"
-      >Download MDB
+    <a class="btn btn-outline-white" href="https://my-services.samakunchan.fr/" target="_blank" role="button"
+      >Mes services
       <i class="fas fa-download ml-2"></i>
     </a>
-    <a class="btn btn-outline-white" href="https://mdbootstrap.com/education/bootstrap/" target="_blank" role="button"
-      >Start free tutorial
+    <a class="btn btn-outline-white" href="https://github.com/samakunchan" target="_blank" role="button"
+      >Mes repositories
       <i class="fas fa-graduation-cap ml-2"></i>
     </a>
   </div>
@@ -17,36 +17,16 @@
 
   <!-- Social icons -->
   <div class="pb-4">
-    <a href="https://www.facebook.com/mdbootstrap" target="_blank">
-      <i class="fab fa-facebook-f mr-3"></i>
-    </a>
 
-    <a href="https://twitter.com/MDBootstrap" target="_blank">
-      <i class="fab fa-twitter mr-3"></i>
-    </a>
-
-    <a href="https://www.youtube.com/watch?v=7MUISDJ5ZZ4" target="_blank">
-      <i class="fab fa-youtube mr-3"></i>
-    </a>
-
-    <a href="https://plus.google.com/u/0/b/107863090883699620484" target="_blank">
-      <i class="fab fa-google-plus-g mr-3"></i>
-    </a>
-
-    <a href="https://dribbble.com/mdbootstrap" target="_blank">
-      <i class="fab fa-dribbble mr-3"></i>
-    </a>
-
-    <a href="https://pinterest.com/mdbootstrap" target="_blank">
-      <i class="fab fa-pinterest mr-3"></i>
-    </a>
-
-    <a href="https://github.com/mdbootstrap/bootstrap-material-design" target="_blank">
+    <a href="https://github.com/samakunchan" target="_blank">
       <i class="fab fa-github mr-3"></i>
     </a>
 
-    <a href="http://codepen.io/mdbootstrap/" target="_blank">
-      <i class="fab fa-codepen mr-3"></i>
+    <a href="https://www.linkedin.com/in/cedric-badjah-9646b3141/" target="_blank">
+      <i class="fab fa-linkedin mr-3"></i>
+    </a>
+    <a href="https://www.malt.fr/profile/cedricbadjah" target="_blank">
+      Malt
     </a>
   </div>
   <!-- Social icons -->
