--- a/src/app/pages/reservation/formulaire/formulaire.component.html
+++ b/src/app/pages/reservation/formulaire/formulaire.component.html
@@ -3,11 +3,11 @@
   <form [formGroup]="reservationForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
       <label for="lastname" class="bmd-label-floating">Nom</label>
-      <input type="text" class="form-control" id="lastname" formControlName="lastname" ngModel="Badjah" />
+      <input type="text" class="form-control" id="lastname" placeholder="Ex: Badjah" formControlName="lastname"/>
     </div>
     <div class="form-group">
       <label for="firstname" class="bmd-label-floating">Prénom</label>
-      <input type="text" class="form-control" id="firstname" formControlName="firstname" ngModel="Cédric" />
+      <input type="text" class="form-control" id="firstname" placeholder="Ex: Cédric" formControlName="firstname"/>
     </div>
     <div *ngIf="sessionStorageMap$ | async as info">
       <button
