--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,13 +63,13 @@ header,
 }
 
 .top-nav-collapse {
-  background-color: #1c2331;
+  background-color: #1a2580;
 }
 
 /* Adding color to the Navbar on mobile */
 @media only screen and (max-width: 768px) {
   .navbar {
-    background-color: #1c2331;
+    background-color: #1a2580;
   }
 }
 .for-all-screen {
@@ -88,5 +88,5 @@ header,
 }
 /* Footer color for sake of consistency with Navbar */
 .page-footer {
-  background-color: #1c2331;
+  background-color: #1a2580;
 }
